@@ -4,7 +4,6 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
 
-
 @SpringBootApplication(exclude = {SecurityAutoConfiguration.class})
 public class HydraApplication {
 
