@@ -49,6 +49,12 @@
 		<org.codehaus.groovy.version>2.4.7</org.codehaus.groovy.version>
 		<codehaus.gmaven.plus.version>1.5</codehaus.gmaven.plus.version>
 		<maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
+
+		<!-- auto doc dependencies properties -->
+		<springfox.version>2.9.2</springfox.version>
+		<springfox.spring.plugin.version>1.2.0.RELEASE</springfox.spring.plugin.version>
+		<springfox.javadoc.version>0.9.4</springfox.javadoc.version>
+		<maven.javadoc.plugin.version>2.10.4</maven.javadoc.plugin.version>
 	</properties>
 
 	<dependencyManagement>
@@ -110,22 +116,6 @@
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>${apache.commons.lang.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-test</artifactId>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.restdocs</groupId>
-				<artifactId>spring-restdocs-mockmvc</artifactId>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.security</groupId>
-				<artifactId>spring-security-test</artifactId>
-				<scope>test</scope>
 			</dependency>
 
 			<dependency>
@@ -206,6 +196,44 @@
 			<version>${org.codehaus.groovy.version}</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!--  doc dependencies -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-data-rest</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-bean-validators</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.plugin</groupId>
+			<artifactId>spring-plugin-core</artifactId>
+			<version>${springfox.spring.plugin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.plugin</groupId>
+			<artifactId>spring-plugin-metadata</artifactId>
+			<version>${springfox.spring.plugin.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-javadoc</artifactId>
+			<version>0.9.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -274,6 +302,33 @@
 					</configuration>
 				</plugin>
 
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.10.4</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>javadoc</goal>
+							</goals>
+							<phase>process-classes</phase>
+							<configuration>
+								<doclet>springfox.javadoc.doclet.SwaggerPropertiesDoclet</doclet>
+								<docletArtifact>
+									<groupId>io.springfox</groupId>
+									<artifactId>springfox-javadoc</artifactId>
+									<version>0.9.4</version>
+								</docletArtifact>
+								<additionalparam>
+									-classdir ${project.build.outputDirectory}
+								</additionalparam>
+								<sourcepath>${project.build.sourceDirectory}</sourcepath>
+								<subpackages>com.agh.hydra</subpackages>
+								<useStandardDocletOptions>false</useStandardDocletOptions>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
@@ -296,5 +351,13 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>spring-plugins-release</id>
+			<name>Spring Plugins Repository</name>
+			<url>http://repo.spring.io/plugins-release</url>
+		</repository>
+	</repositories>
 
 </project>
