@@ -1,3 +1,4 @@
+ - #3 config springfox swagger api-docs
  - #8 clean maven structure, run test specs with each build
  - #2 groovy spock tests config
  - #1 mybatis config
